--- a/index.html
+++ b/index.html
@@ -3,11 +3,42 @@
 <head>
     <meta charset="uft-8">
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <div class="header">
+
+        <h3 id="title">Rock Paper Scissors</h3>
+
+    </div>
+
+    <div id="container">
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+    </div>
+
+    <div id="score-board">
+        <h2>computer choice: <span id="comp-choice"></span></h2>
+        <h2>player choice: <span id="player-choice"></span></h2>
+        <h2>round winner: <span id="round-winner"></span></h2>
+        <h2 id="score-display">scoreboard  
+            <h2>player score: <span id="player-score"></span></h2>
+            <h2>computer score: <span id="computer-score"></span></h2>
+        </h2>
+        <h2>final result: <span id="result-display"></span></h2>
+
+    </div>
+
+    <div id="restart">
+        <button id="play-again">PLAY AGAIN</button>
+    </div>
+
     
+
 </body>
 
 </html>
